Fixed horizontal scroll bar issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,6 @@ ul {
 }
 
 .container {
-  width: 100vw;
   background-color: #a99bbf;
 }
 
