--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -2,7 +2,6 @@
 
 // container
 .container {
-	width: 100vw;
 	background-color: $purple;
 }
 
